--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
   <p class="eleven">virtual wish</p>
   <p class="twelve">phoebe's website</p>
 
-  <p class="sen1">The font is a set of heavy, bold English fonts </p>
-  <p class="sen2">I did the brand identification of individuals.</p>
-  <p class="sen3">The project was inspired by an old house in Shanghai to create a book.</p>
-  <p class="sen4">The project recalls a small house in the country during childhood.</p>
-  <p class="sen5">The brand strategy is female. We created a female bar.</p>
-  <p class="sen6">This project focuses on "id,ego,supergo" and uses video narration<br />to express my understanding.</p>
-  <p class="sen7">This project provides a series of mobile phone use tutorials for<br />the elderly to learn and use.</p>
+  <p class="sen1">May 2022</p>
+  <p class="sen2">2021.11.10</p>
+  <p class="sen3">2021.10.20</p>
+  <p class="sen4">2022.01.03</p>
+  <p class="sen5">2022.01.07</p>
+  <p class="sen6">2021.10.27</p>
+  <p class="sen7">2022.06.16</p>
   <p class="sen8">This project is a book designed for the clarity boom of the 90s.</p>
   <p class="sen9">The book satirizes the phenomenon of many online images<br />being blurred out.</p>
   <p class="sen10">The project is a community book exchange.</p>
