--- a/36.5.html
+++ b/36.5.html
@@ -21,7 +21,7 @@
 
 <div class="slider-container">
   <div class="slider-content">
-    <video class="slider-item custom-video" src="./images1/404.mp4" controls></video>
+      <video class="slider-item custom-video" src="./images1/36.5.mp4" controls></video>
       <img class="slider-item" src="./images1/36.5-9.JPG" alt="Image 1">
       <img class="slider-item" src="./images1/36.5-1.JPG" alt="Image 2">
       <img class="slider-item" src="./images1/36.5-2.JPG" alt="Image 3">
@@ -57,7 +57,7 @@
   <p id="shape-text" class="nine">shape of memory</p>
   <p id="mimi-text" class="ten">Mimiwoof</p>
   <p id="no tag-text" class="eleven">no tag on me</p>
-  <p id="website-text" class="twelve">phoebe's website</p>
+  <p id="website-text" class="twelve">bamboo joint</p>
   
   <p class="sen1">Typography(2022)</p>
   <p class="sen2">Branding(2021)</p>
