--- a/breaking.html
+++ b/breaking.html
@@ -63,7 +63,7 @@
 <p id="shape-text" class="nine">shape of memory</p>
 <p id="mimi-text" class="ten">Mimiwoof</p>
 <p id="no tag-text" class="eleven">no tag on me</p>
-<p id="website-text" class="twelve">phoebe's website</p>
+<p id="website-text" class="twelve">bamboo joint</p>
 
   <p class="sen1">Typography(2022)</p>
   <p class="sen2">Branding(2021)</p>
