--- a/identy.html
+++ b/identy.html
@@ -50,7 +50,7 @@
   <p id="shape-text" class="nine">shape of memory</p>
   <p id="mimi-text" class="ten">Mimiwoof</p>
   <p id="no tag-text" class="eleven">no tag on me</p>
-  <p id="website-text"class="twelve">phoebe's website</p>
+  <p id="website-text"class="twelve">bamboo joint</p>
   
 
   
