--- a/mimi.html
+++ b/mimi.html
@@ -20,15 +20,28 @@
 </section>
 <div class="slider-container">
   <div class="slider-content">
-      <img class="slider-item" src="./images1/old-1.jpg" alt="Image 1">
-      <img class="slider-item" src="./images1/old-2.jpg" alt="Image 2">
-      <img class="slider-item" src="./images1/old-3.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/old-4.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/old-5.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/old-6.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/old-7.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/old-8.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/old-9.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-1-1.jpg" alt="Image 1">
+      <img class="slider-item" src="./images1/mimi-2.jpg" alt="Image 2">
+      <img class="slider-item" src="./images1/mimi-3.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-4.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-5.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-6.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-7.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-8.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-9.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-10.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-11.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-12.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-13.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-14.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-15.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-16.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-18.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-19.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-20.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-21.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-22.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-23.jpg" alt="Image 3">
   </div>
 </div>
 
@@ -54,7 +67,7 @@
 <p id="shape-text" class="nine">shape of memory</p>
 <p id="mimi-text" class="ten">Mimiwoof</p>
 <p id="no tag-text" class="eleven">no tag on me</p>
-<p id="website-text" class="twelve">phoebe's website</p>
+<p id="website-text" class="twelve">bamboo joint</p>
 
   <p class="sen1">Typography(2022)</p>
   <p class="sen2">Branding(2021)</p>
