--- a/no tag.html
+++ b/no tag.html
@@ -20,16 +20,9 @@
 </section>
 <div class="slider-container">
   <div class="slider-content">
-    <video class="slider-item custom-video" src="./images1/404.mp4" controls></video>
-      <img class="slider-item" src="./images1/old-1.jpg" alt="Image 1">
-      <img class="slider-item" src="./images1/old-2.jpg" alt="Image 2">
-      <img class="slider-item" src="./images1/old-3.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/old-4.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/old-5.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/old-6.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/old-7.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/old-8.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/old-9.jpg" alt="Image 3">
+    <video class="slider-item custom-video" src="./images1/notag.mp4" controls></video>
+      <img class="slider-item" src="./images1/notag-1.jpg" alt="Image 1">
+      <img class="slider-item" src="./images1/notag-6.jpg" alt="Image 2">
   </div>
 </div>
 
@@ -45,9 +38,9 @@
 
 <p id="stickers-text" class="five">stickers</p>
 
-<p class="name2">advisor : Scarlett</p>
-<p class="name1">author : phoebe / jane / print</p>
-<p class="intro">The old book exchange project is a community activity designed for several communities in Nangong Community, Shanghai. This project is designed for Prince Apartment, a residential area in Nanggong Community. It is mainly aimed at the knowledgeable people in the Prince's apartment, and the old book resources in the community can be circulated by exchanging one old book for another, so as to form a friendly environment for book exchange.</p>
+<p class="name2">advisor : neo</p>
+<p class="name1">author : yoa / phoebe / jane / print</p>
+<p class="intro">The short film tells the story of five girls who are bound by labels, and who accept their imperfections and find themselves under the influence of the confident power of a shamrock girl with no limits. This is an animation about movement and beauty, as well as the embodiment of girl power and confidence. Do we have to be what other people define us to be? What does beauty really look like? As an all-girl creative group, we want to tell every girl that we are all unique and beautiful, and that our imperfections and differences make us who we really are.</p>
 
 <p id="wish-text" class="six">virtual wish</p>
 <p id="breaking-text" class="seven">breaking</p>
@@ -55,7 +48,7 @@
 <p id="shape-text" class="nine">shape of memory</p>
 <p id="mimi-text" class="ten">Mimiwoof</p>
 <p id="no tag-text" class="eleven">no tag on me</p>
-<p id="website-text" class="twelve">phoebe's website</p>
+<p id="website-text" class="twelve">bamboo joint</p>
 
   <p class="sen1">Typography(2022)</p>
   <p class="sen2">Branding(2021)</p>
