--- a/shape.html
+++ b/shape.html
@@ -61,9 +61,9 @@
 
 <p id="stickers-text" class="five">stickers</p>
 
-<p class="name2">advisor : Scarlett</p>
-<p class="name1">author : phoebe / jane / print</p>
-<p class="intro">The old book exchange project is a community activity designed for several communities in Nangong Community, Shanghai. This project is designed for Prince Apartment, a residential area in Nanggong Community. It is mainly aimed at the knowledgeable people in the Prince's apartment, and the old book resources in the community can be circulated by exchanging one old book for another, so as to form a friendly environment for book exchange.</p>
+<p class="name2">advisor : Tian Bo</p>
+<p class="name1">author : phoebe</p>
+<p class="intro">Every moment that is commemorated exists in another form, that is, candle tears. I collected the tears left by four people when they lit candles on Remembrance Day, as well as the images related to this anniversary, and used the scanned tears as the covers of the four books. Each book was cut to match the shape of a candle tear. Do these books also make us think about the special "traces" behind these days that are commemorated and treasured in our lives? I thought that returning these books to their collectors might be another form of remembrance and collection.</p>
 
 <p id="wish-text" class="six">virtual wish</p>
 <p id="breaking-text" class="seven">breaking</p>
@@ -71,7 +71,7 @@
 <p id="shape-text" class="nine">shape of memory</p>
 <p id="mimi-text" class="ten">Mimiwoof</p>
 <p id="no tag-text" class="eleven">no tag on me</p>
-<p id="website-text"class="twelve">phoebe's website</p>
+<p id="website-text"class="twelve">bamboo joint</p>
 
   <p class="sen1">Typography(2022)</p>
   <p class="sen2">Branding(2021)</p>
