--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <p class="nine">shape of memory</p>
   <p class="ten">me</p>
   <p class="eleven">no tag on me</p>
-  <p class="twelve">phoebe's website</p>
+  <p class="twelve">bamboo joint</p>
 
   <p class="sen1">Typography(2022)</p>
   <p class="sen2">Branding(2021)</p>
