--- a/website.html
+++ b/website.html
@@ -20,15 +20,10 @@
 </section>
 <div class="slider-container">
   <div class="slider-content">
-      <img class="slider-item" src="./images1/old-1.jpg" alt="Image 1">
-      <img class="slider-item" src="./images1/old-2.jpg" alt="Image 2">
-      <img class="slider-item" src="./images1/old-3.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/old-4.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/old-5.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/old-6.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/old-7.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/old-8.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/old-9.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/zj-1.jpg" alt="Image 1">
+      <img class="slider-item" src="./images1/zj-4.jpg" alt="Image 2">
+      <img class="slider-item" src="./images1/zj-5.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/zj-2.jpg" alt="Image 3">
   </div>
 </div>
 
@@ -44,9 +39,9 @@
 
 <p id="stickers-text" class="five">stickers</p>
 
-<p class="name2">advisor : Scarlett</p>
-<p class="name1">author : phoebe / jane / print</p>
-<p class="intro">This project is a sort and summary of some of my previous works. They are organized into five categories. Some of the works are presented in the form of personal websites. The five categories correspond to the five colors respectively. After clicking, the corresponding works introduction and specific graphic information will be displayed.</p>
+<p class="name2">advisor : willie</p>
+<p class="name1">author : phoebe</p>
+<p class="intro">For this project, I made a Chinese font with only eight characters. Taking the traditional Song typeface as reference, the first and last parts of the strokes of song typeface are designed. I turn the strokes up where I started, down where I started, with a thinner torso in the middle. It looks like sections of bamboo, and the whole font also looks like a combination of calligraphy and song typeface beauty.</p>
 
 <p id="wish-text" class="six">virtual wish</p>
   <p id="breaking-text" class="seven">breaking</p>
@@ -54,7 +49,7 @@
   <p id="shape-text" class="nine">shape of memory</p>
   <p id="mimi-text" class="ten">Mimiwoof</p> 
   <p id="no tag-text" class="eleven">no tag on me</p>
-  <p id="website-text" class="twelve">phoebe's website</p>
+  <p id="website-text" class="twelve">Bamboo joint</p>
 
   <p class="sen1">Typography(2022)</p>
   <p class="sen2">Branding(2021)</p>
