--- a/wish.html
+++ b/wish.html
@@ -20,6 +20,7 @@
 </section>
 <div class="slider-container">
   <div class="slider-content">
+    <video class="slider-item custom-video" src="./images1/wish.mp4" controls></video>
       <img class="slider-item" src="./images1/wish-1.jpg" alt="Image 1">
       <img class="slider-item" src="./images1/wish-2.jpg" alt="Image 2">
       <img class="slider-item" src="./images1/wish-3.jpg" alt="Image 3">
@@ -47,7 +48,7 @@
 <p id="shape-text" class="nine">shape of memory</p>
 <p id="mimi-text" class="ten">Mimiwoof</p> 
 <p id="no tag-text" class="eleven">no tag on me</p>
-<p id="website-text" class="twelve">phoebe's website</p>
+<p id="website-text" class="twelve">bamboo joint</p>
 
   <p class="sen1">Typography(2022)</p>
   <p class="sen2">Branding(2021)</p>
