--- a/me.html
+++ b/me.html
@@ -21,6 +21,7 @@
 
 <div class="slider-container">
   <div class="slider-content">
+    <video class="slider-item custom-video" src="./images1/me.mp4" controls></video>
       <img class="slider-item" src="./images1/me-1.jpg" alt="Image 1">
       <img class="slider-item" src="./images1/me-2.jpg" alt="Image 2">
       <img class="slider-item" src="./images1/me-3.jpg" alt="Image 3">
