--- a/36.5.html
+++ b/36.5.html
@@ -50,6 +50,7 @@
   <p id="shizhi-text" class="two">shizhi</p>
   
   <p id="clear-text" class="three">clear craze</p>
+  <p id="oldbook-text" class="four">old book exchange</p>
   <p id="stickers-text" class="five">stickers</p>
   <p id="wish-text" class="six">virtual wish</p>
   <p id="breaking-text" class="seven">breaking</p>
@@ -82,7 +83,7 @@
 
   <div id="square" onclick="location.href='./roundsharp.html'"></div>
   <div id="square1" onclick="location.href='./identy.html'"></div>
-  <div id="square2" onclick="location.href='./windows.html'"></div>
+  <div id="square2" onclick="location.href='./win.html'"></div>
   <div id="square3"></div>
   <div id="square4" onclick="location.href='./utopia.html#utopia-text'"></div>
   <div id="square5" onclick="location.href='./me.html#me-text'"></div>
