--- a/me.html
+++ b/me.html
@@ -29,10 +29,6 @@
       <img class="slider-item" src="./images1/me-5.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/me-6.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/me-7.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/me-8.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/me-9.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/me-10.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/me-11.jpg" alt="Image 3">
       <!-- 添加更多图片项... -->
   </div>
 </div>
@@ -84,7 +80,7 @@
 
   <div id="square" onclick="location.href='./roundsharp.html'"></div>
   <div id="square1" onclick="location.href='./identy.html'"></div>
-  <div id="square2" onclick="location.href='./windows.html'"></div>
+  <div id="square2" onclick="location.href='./win.html'"></div>
   <div id="square3" onclick="location.href='./36.5.html'"></div>
   <div id="square4" onclick="location.href='./utopia.html#utopia-text'"></div>
   <div id="square5"></div>
