--- a/mimi.html
+++ b/mimi.html
@@ -20,28 +20,14 @@
 </section>
 <div class="slider-container">
   <div class="slider-content">
-      <img class="slider-item" src="./images1/mimi-1-1.jpg" alt="Image 1">
-      <img class="slider-item" src="./images1/mimi-2.jpg" alt="Image 2">
+
+      <img class="slider-item" src="./images1/mimi-1.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/mimi-2.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/mimi-3.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/mimi-4.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/mimi-5.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/mimi-6.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/mimi-7.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/mimi-8.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/mimi-9.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/mimi-10.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/mimi-11.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/mimi-12.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/mimi-13.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/mimi-14.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/mimi-15.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/mimi-16.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/mimi-18.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/mimi-19.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/mimi-20.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/mimi-21.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/mimi-22.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/mimi-23.jpg" alt="Image 3">
+      
   </div>
 </div>
 
@@ -90,7 +76,7 @@
 
   <div id="square" onclick="location.href='./roundsharp.html'"></div>
   <div id="square1" onclick="location.href='./identy.html'"></div>
-  <div id="square2" onclick="location.href='./windows.html'"></div>
+  <div id="square2" onclick="location.href='./win.html'"></div>
   <div id="square3" onclick="location.href='./36.5.html'"></div>
   <div id="square4" onclick="location.href='./utopia.html#utopia-text'"></div>
   <div id="square5" onclick="location.href='./me.html#me-text'"></div>
