--- a/no tag.html
+++ b/no tag.html
@@ -40,7 +40,7 @@
 
 <p class="name2">advisor : neo</p>
 <p class="name1">author : yoa / phoebe / jane / print</p>
-<p class="intro">The short film tells the story of five girls who are bound by labels, and who accept their imperfections and find themselves under the influence of the confident power of a shamrock girl with no limits. This is an animation about movement and beauty, as well as the embodiment of girl power and confidence. Do we have to be what other people define us to be? What does beauty really look like? As an all-girl creative group, we want to tell every girl that we are all unique and beautiful, and that our imperfections and differences make us who we really are.</p>
+<p class="intro">The short film tells the story of five girls who are bound by labels, and who accept their imperfections and find themselves under the influence of the confident power of a shamrock girl with no limits. This is an animation about movement and beauty, as well as the embodiment of girl power and confidence. Do we have to be what they define us to be? What does beauty really look like? As an all-girl creative group, we want to tell every girl that we are all unique and beautiful, and that our imperfections and differences make us who we really are.</p>
 
 <p id="wish-text" class="six">virtual wish</p>
 <p id="breaking-text" class="seven">breaking</p>
@@ -71,7 +71,7 @@
 
   <div id="square" onclick="location.href='./roundsharp.html'"></div>
   <div id="square1" onclick="location.href='./identy.html'"></div>
-  <div id="square2" onclick="location.href='./windows.html'"></div>
+  <div id="square2" onclick="location.href='./win.html'"></div>
   <div id="square3" onclick="location.href='./36.5.html'"></div>
   <div id="square4" onclick="location.href='./utopia.html#utopia-text'"></div>
   <div id="square5" onclick="location.href='./me.html#me-text'"></div>
@@ -126,6 +126,8 @@ square.addEventListener("mouseleave", function() {
     square.style.display = "none"; /* 鼠标离开时继续隐藏矩形 */
   }
 });
+
+
 </script>
 
   </body>
