--- a/stickers.html
+++ b/stickers.html
@@ -21,22 +21,19 @@
 
 <div class="slider-container">
   <div class="slider-content">
+      <img class="slider-item" src="./images1/sticker-21.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/sticker-22.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/sticker-23.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/sticker-24.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/sticker-25.jpg" alt="Image 3">
+      <img class="slider-item" src="./images1/sticker-26.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/sticker-1.jpg" alt="Image 1">
       <img class="slider-item" src="./images1/sticker-2.jpg" alt="Image 2">
-      <img class="slider-item" src="./images1/sticker-3.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/sticker-4.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/sticker-5.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/sticker-6.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/sticker-7.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/sticker-8.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/sticker-9.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/sticker-10.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/sticker-11.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/sticker-12.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/sticker-13.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/sticker-14.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/sticker-15.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/sticker-16.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/sticker-17.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/sticker-18.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/sticker-19.jpg" alt="Image 3">
@@ -90,7 +87,7 @@
 
   <div id="square" onclick="location.href='./roundsharp.html'"></div>
   <div id="square1" onclick="location.href='./identy.html'"></div>
-  <div id="square2" onclick="location.href='./windows.html'"></div>
+  <div id="square2" onclick="location.href='./win.html'"></div>
   <div id="square3" onclick="location.href='./36.5.html'"></div>
   <div id="square4" onclick="location.href='./utopia.html#utopia-text'"></div>
   <div id="square5" onclick="location.href='./me.html#me-text'"></div>
