--- a/utopia.html
+++ b/utopia.html
@@ -21,12 +21,12 @@
 
 <div class="slider-container">
   <div class="slider-content">
+    <img class="slider-item" src="./images1/utopia-6.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/utopia-1.jpg" alt="Image 1">
       <img class="slider-item" src="./images1/utopia-2.jpg" alt="Image 2">
       <img class="slider-item" src="./images1/utopia-3.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/utopia-4.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/utopia-5.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/utopia-6.jpg" alt="Image 3">
   </div>
 </div>
 
@@ -77,7 +77,7 @@
 
   <div id="square" onclick="location.href='./roundsharp.html'"></div>
   <div id="square1" onclick="location.href='./identy.html'"></div>
-  <div id="square2" onclick="location.href='./windows.html'"></div>
+  <div id="square2" onclick="location.href='./win.html'"></div>
   <div id="square3" onclick="location.href='./36.5.html'"></div>
   <div id="square4"></div>
   <div id="square5" onclick="location.href='./me.html#me-text'"></div>
