--- a/breaking.html
+++ b/breaking.html
@@ -20,9 +20,15 @@
 </section>
 <div class="slider-container">
   <div class="slider-content">
-      
-      <img class="slider-item" src="./images1/break-2.jpg" alt="Image 2">
-      <img class="slider-item" src="./images1/break-4.jpg" alt="Image 3">
+    <img class="slider-item" src="./images1/break-12.jpg" alt="Image 3">
+    <img class="slider-item" src="./images1/break-13.jpg" alt="Image 3">
+    <img class="slider-item" src="./images1/break-14.jpg" alt="Image 3">
+    <img class="slider-item" src="./images1/break-17.jpg" alt="Image 3">
+    <img class="slider-item" src="./images1/break-16.jpg" alt="Image 3">
+    <img class="slider-item" src="./images1/break-17.jpg" alt="Image 3">
+    <img class="slider-item" src="./images1/break-18.jpg" alt="Image 3">
+    <img class="slider-item" src="./images1/break-19.jpg" alt="Image 3">
+    <img class="slider-item" src="./images1/break-20.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/break-5.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/break-6.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/break-7.jpg" alt="Image 3">
@@ -30,15 +36,6 @@
       <img class="slider-item" src="./images1/break-9.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/break-10.jpg" alt="Image 3">
       <img class="slider-item" src="./images1/break-11.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/break-12.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/break-13.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/break-14.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/break-15.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/break-16.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/break-17.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/break-18.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/break-19.jpg" alt="Image 3">
-      <img class="slider-item" src="./images1/break-20.jpg" alt="Image 3">
   </div>
 </div>
 <h2 class="h2">roundsharp</h2>
@@ -87,7 +84,7 @@
 
   <div id="square" onclick="location.href='./roundsharp.html'"></div>
   <div id="square1" onclick="location.href='./identy.html'"></div>
-  <div id="square2" onclick="location.href='./windows.html'"></div>
+  <div id="square2" onclick="location.href='./win.html'"></div>
   <div id="square3" onclick="location.href='./36.5.html'"></div>
   <div id="square4" onclick="location.href='./utopia.html#utopia-text'"></div>
   <div id="square5" onclick="location.href='./me.html#me-text'"></div>
