--- a/oldbbook.html
+++ b/oldbbook.html
@@ -21,6 +21,9 @@
 
 <div class="slider-container">
   <div class="slider-content">
+      <img class="slider-item" src="./images1/old-1-1.jpg" alt="Image 1">
+      <img class="slider-item" src="./images1/old-2-2.jpg" alt="Image 1">
+      <img class="slider-item" src="./images1/old-3-3.jpg" alt="Image 1">
       <img class="slider-item" src="./images1/old-1.jpg" alt="Image 1">
       <img class="slider-item" src="./images1/old-2.jpg" alt="Image 2">
       <img class="slider-item" src="./images1/old-3.jpg" alt="Image 3">
@@ -80,7 +83,7 @@
 
   <div id="square" onclick="location.href='./roundsharp.html'"></div>
   <div id="square1" onclick="location.href='./identy.html'"></div>
-  <div id="square2" onclick="location.href='./windows.html'"></div>
+  <div id="square2" onclick="location.href='./win.html'"></div>
   <div id="square3" onclick="location.href='./36.5.html'"></div>
   <div id="square4" onclick="location.href='./utopia.html#utopia-text'"></div>
   <div id="square5" onclick="location.href='./me.html#me-text'"></div>
