--- a/wish.html
+++ b/wish.html
@@ -41,7 +41,7 @@
 <p class="name2">advisor : Scarlett</p>
 <p class="name1">author : phoebe</p>
 <p class="intro">The inspiration of this project comes from the very interesting phenomenon I found when surfing the Internet in my daily life: people tend to take the occasional rainbow, wishing fountain, koi carp and other specific objects as a symbol of good luck and post them on the Internet to pray for good luck. And the comments section often becomes a virtual wishing well. So, by looking for these "good luck" items and collecting a lot of repeated sentences in the comments section, I set up a website where people can make wishes and pray for the next good luck.</p>
-
+<p id="stickers-text" class="five">stickers</p>
 <p id="wish-text" class="six">virtual wish</p>
 <p id="breaking-text" class="seven">breaking</p>
 <p id="u404-text" class="eight">404 not found</p>
@@ -72,7 +72,7 @@
 
   <div id="square" onclick="location.href='./roundsharp.html'"></div>
   <div id="square1" onclick="location.href='./identy.html'"></div>
-  <div id="square2" onclick="location.href='./windows.html'"></div>
+  <div id="square2" onclick="location.href='./win.html'"></div>
   <div id="square3" onclick="location.href='./36.5.html'"></div>
   <div id="square4" onclick="location.href='./utopia.html#utopia-text'"></div>
   <div id="square5" onclick="location.href='./me.html#me-text'"></div>
